--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@
   <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
   <script src="js/validation.js"></script>
+  <script src="js/effect.js"></script>
   <script src="js/form.js"></script>
   <script src="js/preview.js"></script>
+  <script src="js/picture-size.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/gallery.js"></script>
-  <script src="js/effect.js"></script>
 </body>
 </html>
