--- a/index.html
+++ b/index.html
@@ -232,15 +232,20 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="js/backend.js"></script>
-  <script src="js/utils.js"></script>
+  <!-- <script src="js/backend.js"></script> -->
   <script src="js/data.js"></script>
-  <script src="js/validation.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/effect.js"></script>
+  <script src="js/slider.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/debounce.js"></script>
+  <script src="js/sort.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/form.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/picture-size.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/gallery.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
